--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-datasheet",
-  "version": "1.2.12",
+  "name": "@classdojo/react-datasheet",
+  "version": "0.0.1",
   "description": "Excel-like data grid for React",
   "repository": {
     "type": "git",
