--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Excel-like data grid for React",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nadbm/react-datasheet.git"
+    "url": "ssh://git@github.com/classdojo/react-datasheet.git"
   },
   "author": "Nadim Islam",
   "license": "MIT",
